# E-Lang

./: QUICK_START.md  README.md  file.elang  gui.py  pyproject.toml  run.py
docs/: elang-grammar.md
elang/: __init__.py  __main__.py  ast.py  errors.py  interpreter.py  lexer.py  parser.py
elang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/elang/: calculator.elang  fizzbuzz.elang  gui_calculator.elang  hello_world.elang  inline_click.elang  list_sort.elang  temperature_converter.elang
tests/: test_elang_basic.py
